tests-integration/fixtures/checking/053_prim_int_compare_transitive/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
assertLesser ::
  forall (l :: Int) (r :: Int).
    Compare (l :: Int) (r :: Int) LT => Proxy @(Row Int) ( left :: (l :: Int), right :: (r :: Int) )
assertGreater ::
  forall (l :: Int) (r :: Int).
    Compare (l :: Int) (r :: Int) GT => Proxy @(Row Int) ( left :: (l :: Int), right :: (r :: Int) )
assertEqual ::
  forall (l :: Int) (r :: Int).
    Compare (l :: Int) (r :: Int) EQ => Proxy @(Row Int) ( left :: (l :: Int), right :: (r :: Int) )
transLt ::
  forall (m :: Int) (n :: Int) (p :: Int).
    Compare (m :: Int) (n :: Int) LT =>
    Compare (n :: Int) (p :: Int) LT =>
    Proxy @Int (n :: Int) -> Proxy @(Row Int) ( left :: (m :: Int), right :: (p :: Int) )
transLtEq ::
  forall (m :: Int) (n :: Int) (p :: Int).
    Compare (m :: Int) (n :: Int) LT =>
    Compare (n :: Int) (p :: Int) EQ =>
    Proxy @Int (n :: Int) -> Proxy @(Row Int) ( left :: (m :: Int), right :: (p :: Int) )
transEqGt ::
  forall (m :: Int) (n :: Int) (p :: Int).
    Compare (m :: Int) (n :: Int) EQ =>
    Compare (n :: Int) (p :: Int) GT =>
    Proxy @Int (n :: Int) -> Proxy @(Row Int) ( left :: (m :: Int), right :: (p :: Int) )
transSymmEq ::
  forall (m :: Int) (n :: Int) (p :: Int).
    Compare (n :: Int) (m :: Int) EQ =>
    Compare (n :: Int) (p :: Int) EQ =>
    Proxy @Int (n :: Int) -> Proxy @(Row Int) ( left :: (m :: Int), right :: (p :: Int) )

Types

Diagnostics
error[NoInstanceFound]: No instance found for: Compare (t15 :: Int) (t17 :: Int) LT
  --> 16:1..16:104
   |
16 | transLt :: forall m n p. Compare m n LT => Compare n p LT => Proxy n -> Proxy ( left :: m, right :: p )
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Compare (t21 :: Int) (t23 :: Int) LT
  --> 19:1..19:106
   |
19 | transLtEq :: forall m n p. Compare m n LT => Compare n p EQ => Proxy n -> Proxy ( left :: m, right :: p )
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Compare (t27 :: Int) (t29 :: Int) GT
  --> 22:1..22:106
   |
22 | transEqGt :: forall m n p. Compare m n EQ => Compare n p GT => Proxy n -> Proxy ( left :: m, right :: p )
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Compare (t33 :: Int) (t35 :: Int) EQ
  --> 25:1..25:108
   |
25 | transSymmEq :: forall m n p. Compare n m EQ => Compare n p EQ => Proxy n -> Proxy ( left :: m, right :: p )
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
